[deaton/trenchripper] Push before adding new segemntation.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -247,10 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Kymographs\n",
     "\n",
@@ -258,7 +255,7 @@
     "\n",
     "![example_image](./resources/example_image.jpg)\n",
     "\n",
-    "The output of this step will be a set of `.hdf5` files stored in `headpath/kymograph`. The image data stored in these <br>files takes the form of `(K,T,Y,X)` arrays where K is the trench index, T is time, and Y,X are the crop dimensions. <br>These arrays are accessible using keys of the form `\"[Trench Row Number]/[Image Channel]\"`. For example, <br>looking up phase channel data of trenches in the topmost row of an image will require the key `\"0/Phase\"`"
+    "The output of this step will be a set of `.hdf5` files stored in `headpath/kymograph`. The image data stored in these <br>files takes the form of `(K,T,Y,X)` arrays where K is the trench index, T is time, and Y,X are the crop dimensions. <br>These arrays are accessible using keys of the form `\"[Image Channel]\"`. For example, looking up phase channel <br>data of trenches in the topmost row of an image will require the key `\"Phase\"`"
    ]
   },
   {
@@ -378,9 +375,11 @@
     "\n",
     "1. Determine edges of trench rows based on threshold mask.\n",
     "2. Filter out rows that are too small.\n",
-    "3. Perform cropping using the \"end\" of the row as reference (the end referring to the part of the trench farthest from <br>the feeding channel).\n",
+    "3. Use the remaining rows to compute the drift in y in each image.\n",
+    "4. Apply the drift to the initally detected rows to get rows in all timepoints.\n",
+    "5. Perform cropping using the \"end\" of the row as reference (the end referring to the part of the trench farthest from <br>the feeding channel).\n",
     "\n",
-    "Step 3 performs a simple algorithm to determine the orientation of each trench:\n",
+    "Step 5 performs a simple algorithm to determine the orientation of each trench:\n",
     "\n",
     "```\n",
     "row_orientations = [] # A list of row orientations, starting from the topmost row\n",
@@ -395,6 +394,8 @@
     "        row_orientations.append(downward)\n",
     "```\n",
     "\n",
+    "Additionally, if the device tranches face a single direction, alternation of row orientation may be turned off by setting the<br> `Alternate Orientation?` argument to False. The `Use Median Drift?` argument, when set to True, will use the<br> median drift in y across all FOVs for drift correction, instead of doing drift correction independently for all FOVs. <br>This can be useful if there are a large fraction of FOVs which are failing drift correction. Note that `Use Median Drift?` <br>sets this behavior for both y and x drift correction.\n",
+    "\n",
     "The arguments for this step are:\n",
     "\n",
     " - **y_min_edge_dist (int)** : Minimum row length necessary for detection (filters out small detected objects).\n",
@@ -404,10 +405,14 @@
     " - **trench_len_y (int)** : Length from the end of each trench row to the feeding channel side of the crop.\n",
     "\n",
     " - **Number of Rows (int)** : The number of rows to expect in your image. For instance, two in the example image.\n",
+    " \n",
+    " - **Alternate Orientation? (bool)** : Whether or not to alternate the orientation of consecutive rows.\n",
     "\n",
     " - **Orientation (int)** : The orientation of the top-most row where 0 corresponds to a trench with a downward-oriented trench <br>opening and 1 corresponds to a trench with an upward-oriented trench opening.\n",
     "\n",
     " - **Orientation when < expected rows(int)** : The orientation of the top-most row when the number of detected rows is less than <br>expected. Useful if your trenches drift out of your image in some FOVs.\n",
+    " \n",
+    " - **Use Median Drift? (bool)** : Whether to use the median detected drift across all FOVs, instead of the drift detected in each FOV individually.\n",
     "\n",
     " - **images_per_row(int)** : How many images to output per row for this widget.\n",
     "\n",
@@ -447,15 +452,15 @@
     "\n",
     "The arguments for this step are:\n",
     "\n",
-    "**t (int)** : Timepoint to examine the percentiles and threshold in.\n",
+    " - **t (int)** : Timepoint to examine the percentiles and threshold in.\n",
     "\n",
-    "**x_percentile (int)** : Percentile to use for step 1.\n",
+    " - **x_percentile (int)** : Percentile to use for step 1.\n",
     "\n",
-    "**background_kernel_x (int)** : Median kernel size to use for step 2.\n",
+    " - **background_kernel_x (int)** : Median kernel size to use for step 2.\n",
     "\n",
-    "**smoothing_kernel_x (int)** : Median kernel size to use for step 4.\n",
+    " - **smoothing_kernel_x (int)** : Median kernel size to use for step 4.\n",
     "\n",
-    "**otsu_scaling (float)** : Scaling factor to apply to the threshold determined by Otsu's method.\n",
+    " - **otsu_scaling (float)** : Scaling factor to apply to the threshold determined by Otsu's method.\n",
     "\n",
     "Running the following widget will display the smoothed 1-D signal for each of your timepoints. In addition, the threshold <br>value for each fov will be displayed as a red line. In addition, it will display the detected midpoints for each of your timepoints. <br>If there is too much sparsity, or discontinuity, your drift correction will not be accurate."
    ]
@@ -482,10 +487,13 @@
     "\n",
     "The arguments for this step are:\n",
     "\n",
-    "**trench_width_x (int)** : Trench width to use for cropping.\n",
+    " - **trench_width_x (int)** : Trench width to use for cropping.\n",
     "\n",
-    "**trench_present_thr (float)** : Trenches that appear in less than this percent of FOVs will be eliminated from the dataset.<br>\n",
+    " - **trench_present_thr (float)** : Trenches that appear in less than this percent of FOVs will be eliminated from the dataset.<br>\n",
     "If not removed, missing positions will be inferred from the image drift.\n",
+    "\n",
+    " - **Use Median Drift? (bool)** : Whether to use the median detected drift across all FOVs, instead of the drift detected in each FOV individually.\n",
+    "\n",
     "\n",
     "Running the following widget will display a random kymograph for each row in each fov and will also produce midpoint plots <br>showing retained midpoints"
    ]
@@ -717,10 +725,98 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
+   "source": [
+    "#### Output\n",
+    "\n",
+    "At this point you may want to use your output. The output of this step is a set of `.hdf5` files stored in <br>`headpath/kymograph`. The image data stored in these files takes the form of `(K,T,Y,X)` arrays <br>where K is the trench index, T is time, and Y,X are the crop dimensions.\n",
+    "\n",
+    "These arrays are accessible using keys of the form `\"[Trench Row Number]/[Image Channel]\"`. <br>For example, looking up phase channel data of trenches in the topmost row of an image will require <br>the key `\"0/Phase\"` The metadata associated with these files is a large pandas dataframe relating <br>crops to original FOVs, accessible using the \"kymograph\" key on `headpath/metadata.hdf5`\n",
+    "\n",
+    "To assist in accessing this file, you may use the `trenchripper.pandas_hdf5_handler` object to <br>interface with this file as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta_handle = tr.pandas_hdf5_handler(headpath + \"/metadata.hdf5\")\n",
+    "kymograph_metadata = meta_handle.read_df(\"kymograph\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The columns of the dataframe are as follows:\n",
+    "\n",
+    " - **trenchid** : A unique ID assigned to each trench in the dataset.\n",
+    " \n",
+    " - **timepoints** : The timepoint the crop was collected.\n",
+    " \n",
+    " - **fov** : The FOV in which this crop originated.\n",
+    " \n",
+    " - **row** : The trench row in which this crop originated, defined within an FOV.\n",
+    " \n",
+    " - **trench** : The trench number in which this crop originated, defined within a row.\n",
+    " \n",
+    " - **time (s)** : The time (in seconds) from the experiment start in which this crop was recorded.\n",
+    " \n",
+    " - **lane orientation** : The orientation of the crop (top: trench opening facing down, bottom: trench opening facing up).\n",
+    " \n",
+    " - **y (local)** : Y position (in microns) of the top-left pixel of the crop.\n",
+    " \n",
+    " - **x (local)** : X position (in microns) of the top-left pixel of the crop.\n",
+    " \n",
+    " - **y (global)** : Y position (in microns) of the top-left pixel of the crop, defined globally using the stage metadata.\n",
+    " \n",
+    " - **x (global)** : X position (in microns) of the top-left pixel of the crop, defined globally using the stage metadata.\n",
+    " \n",
+    " - **File Index** : The file index in which this data is stored. Filenames of the form 'kymograph_{File Index}.hdf5\n",
+    " \n",
+    " - **File Trench Index** : The file trench index in which this data is stored. Accessible using the k index of the (k,t,y,x) array in each file.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymograph_metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entries in the dataframe may be used to lookup specific pieces of data in the kymograph crops. For instance,<br>\n",
+    "to find a Phase image of the kymograph at file index 26 and File Trench Index 14, you would open the file<br>\n",
+    "`headpath/kymograph/kymograph_25.hdf5`, access the key `Phase` and access index 14 of the 1st array <br>\n",
+    "dimension `array[14]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "with h5py.File(headpath + \"/kymograph/kymograph_25.hdf5\") as infile:\n",
+    "    data = infile[\"Phase\"][14]\n",
+    "\n",
+    "plt.imshow(data[0], cmap=\"Greys_r\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Fluorescence Segmentation\n",
     "\n",
