--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-13_decomposing_lineage_tracing/Untitled.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-13_decomposing_lineage_tracing/Untitled.ipynb
@@ -76,7 +76,10 @@
    "outputs": [],
    "source": [
     "Tracking_Solver = tr.tracking.tracking_solver(\n",
-    "    headpath, \"fluorsegmentation\", ScoreFn=score_function, edge_limit=2, t_chunk=10\n",
+    "    headpath,\n",
+    "    \"fluorsegmentation\",\n",
+    "    ScoreFn=score_function,\n",
+    "    edge_limit=2,\n",
     ")\n",
     "data, orientation, empty_trenches = score_function.output.result"
    ]
@@ -158,6 +161,29 @@
    "outputs": [],
    "source": [
     "dask_controller.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmapcolors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "import numpy as np\n",
+    "import matplotlib\n",
+    "\n",
+    "plt.scatter([1, 2, 3], [1, 2, 3], s=5)"
    ]
   },
   {
