[shenker/microscope_design] WIP seesaw FP spectra.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -89,19 +89,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sample line (pass defocus array?) [ex,y,x]\n",
-    "\n",
-    "###\n",
-    "\n",
     "# list of urls -> dict of spectra (columns: ex, em, 2p)\n",
-    "# rebin spectra\\n\",\n",
+    "# rebin spectra\n",
     "# rebinned spectra -> 2D spectra (see-saw)\n",
     "\n",
-    "# 2D spectra -> img spectral hypercube ground truth [ex,em,y,x]\n",
-    "# sample line (pass defocus array?) [ex,y,x]\n",
+    "# 2D spectrum * excitation spectrum * QY [ex] -> [em]\n",
+    "\n",
     "# rebin laser spectrum\n",
-    "# sample line * rebinned laser spectrum [ex,y,x]\n",
-    "# line * sample = emission ground truth [em,y,x]\n",
+    "# sample line * rebinned laser spectrum = excitation image [ex,y,x]\n",
+    "# excitation image (above) -> emission ground truth [em,y,x]\n",
     "# emission ground truth + reflectivity * excitation = emission [em,y,x]"
    ]
   },
@@ -126,6 +122,135 @@
    "outputs": [],
    "source": [
     "spectra = simulation.import_fpbase_spectra(spectra_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(-(x - 1) * (x + 1) * x).max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-1, 1, 100)\n",
+    "plt.plot(x, -(x - 1) * (x + 1) * x * 3 * np.sqrt(3) / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid_range(ary):\n",
+    "    is_valid = ~np.isnan(ary)\n",
+    "    idx1 = is_valid.argmax()\n",
+    "    idx2 = len(ary) - is_valid[::-1].argmax()\n",
+    "    return idx1, idx2\n",
+    "\n",
+    "\n",
+    "def seesaw_spectrum(spectrum, amount):\n",
+    "    x = np.zeros(len(spectrum))\n",
+    "    idx1, idx2 = valid_range(spectrum)\n",
+    "    x[idx1:idx2] = np.linspace(-1, 1, idx2 - idx1)\n",
+    "    x = x.reshape((-1,) + (1,) * (np.ndim(spectrum) - 1))\n",
+    "    shape = -(x - 1) * (x + 1) * x * 3 * np.sqrt(3) / 4\n",
+    "    new_spectrum = (amount * shape + 1 / 2) * spectrum\n",
+    "    new_spectrum /= np.nanmax(new_spectrum, axis=0)\n",
+    "    return new_spectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = seesaw_spectrum(\n",
+    "    spectra[\"mCherry2\"][\"em\"].values[:, np.newaxis], np.array([0.3, 0.5])[np.newaxis, :]\n",
+    ")\n",
+    "plt.plot(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = seesaw_spectrum(\n",
+    "    spectra[\"mCherry2\"][\"em\"].values[:, np.newaxis],\n",
+    "    np.linspace(-0.5, 1, len(excitation_bins))[np.newaxis, :],\n",
+    ")\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], 1))\n",
+    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], -1))\n",
+    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], 0.2))\n",
+    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], -0.2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_index = spectra[\"mCherry2\"].index.astype(np.float)\n",
+    "excitation_index = pd.Index(excitation_bins, name=\"wavelength\")\n",
+    "new_index = excitation_index.union(old_index)\n",
+    "b = spectra[\"mCherry2\"].reindex(index=new_index)\n",
+    "b.interpolate(method=\"nearest\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.loc[excitation_index].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excitation_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nanmax(a[\"ex\"])"
    ]
   },
   {
@@ -216,87 +341,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2 -> [[2]]\n",
-    "# [2,3] -> [[2],[3]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array([0, 1, 2]).reshape((-1, 1, 1)).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array([0, 1, 2]).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.atleast_3d([0, 1, 2]).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.atleast_2d([2, 3]).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.array([2, 2]).reshape((-1, 1))  # .shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = scipy.stats.gennorm.pdf(\n",
-    "    np.linspace(-1, 1, 10)[np.newaxis, :], np.array([2, 10])[:, np.newaxis]\n",
-    ")\n",
-    "plt.plot(a.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scipy.stats.gennorm.pdf(\n",
-    "    np.linspace(-1, 1, 10)[:, np.newaxis, np.newaxis],\n",
-    "    np.linspace(1, 2, 7)[np.newaxis, np.newaxis, :],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "line_img = simulation.draw_excitation_line(\n",
-    "    1.3 * u.mm, 0.3 * u.um, 0 * u.um, 1, p_vertical=3, p_horizontal=6\n",
+    "    np.linspace(0.6, 1.3, len(excitation_bins)) * u.mm,\n",
+    "    0.3 * u.um,\n",
+    "    0 * u.um,\n",
+    "    1,\n",
+    "    p_vertical=3,\n",
+    "    p_horizontal=6,\n",
+    "    height_px=60,\n",
+    "    width_px=200,\n",
     ")"
    ]
   },
@@ -306,27 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_img.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img = simulation.draw_excitation_line(\n",
-    "    1.3 * u.mm, 0.3 * u.um, 0 * u.um, np.array([0.2, 1]), p_vertical=3, p_horizontal=6\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img[1].plot()"
+    "line_img.nbytes / 1e6"
    ]
   },
   {
@@ -344,43 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_img = simulation.draw_excitation_line(\n",
-    "    [1.0, 1.3] * u.mm,\n",
-    "    [0.3, 0.3] * u.um,\n",
-    "    [0, 0] * u.um,\n",
-    "    np.array([1, 1]),\n",
-    "    p_vertical=np.array([3, 3]),\n",
-    "    p_horizontal=np.array([6, 6]),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img[0].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img = simulation.draw_excitation_line(\n",
-    "    1.3 * u.mm, 0.3 * u.um, 0 * u.um, 1, p_vertical=3, p_horizontal=6\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img.plot()"
+    "line_img[-1].plot()"
    ]
   },
   {
