[shenker/microscope_design] WIP absorption image. Switched from float64 to float32 to save memory in draw_excitation_line.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -17,7 +17,8 @@
     "import nd2reader\n",
     "import tifffile\n",
     "import scipy.stats\n",
-    "import skimage"
+    "import skimage\n",
+    "import skimage.filters"
    ]
   },
   {
@@ -72,8 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excitation_bins = np.linspace(300, 850, 1000)\n",
-    "emission_bins = excitation_bins"
+    "excitation_bins = np.linspace(300, 850, 200)\n",
+    "excitation_bin_size = (excitation_bins[-1] - excitation_bins[0]) / len(excitation_bins)\n",
+    "emission_bins = np.linspace(300, 850, 200)  # excitation_bins\n",
+    "emission_bin_size = (emission_bins[-1] - emission_bins[0]) / len(emission_bins)"
    ]
   },
   {
@@ -81,24 +84,6 @@
    "metadata": {},
    "source": [
     "# FP spectra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# list of urls -> dict of spectra (columns: ex, em, 2p)\n",
-    "# rebin spectra\n",
-    "# rebinned spectra -> 2D spectra (see-saw)\n",
-    "\n",
-    "# 2D spectrum * excitation spectrum * QY [ex] -> [em]\n",
-    "\n",
-    "# rebin laser spectrum\n",
-    "# sample line * rebinned laser spectrum = excitation image [ex,y,x]\n",
-    "# excitation image (above) -> emission ground truth [em,y,x]\n",
-    "# emission ground truth + reflectivity * excitation = emission [em,y,x]"
    ]
   },
   {
@@ -121,7 +106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra = simulation.import_fpbase_spectra(spectra_urls)"
+    "spectra = {\n",
+    "    name: simulation.interpolate_dataframe(spectrum, emission_bins)\n",
+    "    for name, spectrum in simulation.import_fpbase_spectra(spectra_urls).items()\n",
+    "}"
    ]
   },
   {
@@ -130,53 +118,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(-(x - 1) * (x + 1) * x).max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.linspace(-1, 1, 100)\n",
-    "plt.plot(x, -(x - 1) * (x + 1) * x * 3 * np.sqrt(3) / 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def valid_range(ary):\n",
-    "    is_valid = ~np.isnan(ary)\n",
-    "    idx1 = is_valid.argmax()\n",
-    "    idx2 = len(ary) - is_valid[::-1].argmax()\n",
-    "    return idx1, idx2\n",
-    "\n",
-    "\n",
-    "def seesaw_spectrum(spectrum, amount):\n",
-    "    x = np.zeros(len(spectrum))\n",
-    "    idx1, idx2 = valid_range(spectrum)\n",
-    "    x[idx1:idx2] = np.linspace(-1, 1, idx2 - idx1)\n",
-    "    x = x.reshape((-1,) + (1,) * (np.ndim(spectrum) - 1))\n",
-    "    shape = -(x - 1) * (x + 1) * x * 3 * np.sqrt(3) / 4\n",
-    "    new_spectrum = (amount * shape + 1 / 2) * spectrum\n",
-    "    new_spectrum /= np.nanmax(new_spectrum, axis=0)\n",
-    "    return new_spectrum"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = seesaw_spectrum(\n",
-    "    spectra[\"mCherry2\"][\"em\"].values[:, np.newaxis], np.array([0.3, 0.5])[np.newaxis, :]\n",
+    "fp_names = list(spectra.keys())\n",
+    "fp_excitation_spectra = np.stack(\n",
+    "    [np.zeros(len(excitation_bins)), *[spectra[name][\"ex\"].values for name in fp_names]]\n",
     ")\n",
-    "plt.plot(a)"
+    "seesaw_amounts = np.linspace(-0.5, 1, len(excitation_bins))[np.newaxis, :]\n",
+    "fp_emission_spectra = np.stack(\n",
+    "    [\n",
+    "        np.zeros((len(emission_bins), len(excitation_bins))),\n",
+    "        *[\n",
+    "            simulation.seesaw_spectrum(\n",
+    "                spectra[name][\"em\"].values[:, np.newaxis], seesaw_amounts\n",
+    "            )\n",
+    "            for name in fp_names\n",
+    "        ],\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -185,147 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = seesaw_spectrum(\n",
-    "    spectra[\"mCherry2\"][\"em\"].values[:, np.newaxis],\n",
-    "    np.linspace(-0.5, 1, len(excitation_bins))[np.newaxis, :],\n",
-    ")\n",
-    "plt.imshow(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], 1))\n",
-    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], -1))\n",
-    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], 0.2))\n",
-    "plt.plot(seesaw_spectrum(spectra[\"mCherry2\"][\"em\"], -0.2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "old_index = spectra[\"mCherry2\"].index.astype(np.float)\n",
-    "excitation_index = pd.Index(excitation_bins, name=\"wavelength\")\n",
-    "new_index = excitation_index.union(old_index)\n",
-    "b = spectra[\"mCherry2\"].reindex(index=new_index)\n",
-    "b.interpolate(method=\"nearest\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.loc[excitation_index].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "excitation_index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.nanmax(a[\"ex\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nd2 = nd2reader.ND2Reader(\"ClpP_mEGFP_100x.nd2\")\n",
-    "# nd2._parser._raw_metadata.z_levels = [0]\n",
-    "# sample_img = nd2.get_frame_2D(v=0, c=1)  # [:,500:1000]\n",
-    "# sample_img = image_to_xarray(sample_img, nd2.metadata[\"pixel_microns\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_img = tifffile.imread(\"t000001xy14c2.tif\")\n",
-    "scale = 4.25 / 20\n",
-    "sample_img = simulation.image_to_xarray(sample_img, scale)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_img.plot.imshow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import skimage.filters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = sample_img.values > skimage.filters.threshold_otsu(sample_img.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_spectra = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spectra_idx = skimage.morphology.label(labels) % num_spectra + (labels != 0)"
+    "plt.imshow(fp_emission_spectra[3])"
    ]
   },
   {
@@ -349,7 +166,7 @@
     "    p_vertical=3,\n",
     "    p_horizontal=6,\n",
     "    height_px=60,\n",
-    "    width_px=200,\n",
+    "    width_px=6500,\n",
     ")"
    ]
   },
@@ -381,12 +198,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sample_offset = simulation.offset_xarray(sample_img, line_img, dict(x=500, y=470))"
+    "# Sample"
    ]
   },
   {
@@ -395,7 +210,267 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(sample_offset * line_img).plot(aspect=20, size=5)"
+    "# nd2 = nd2reader.ND2Reader(\"ClpP_mEGFP_100x.nd2\")\n",
+    "# nd2._parser._raw_metadata.z_levels = [0]\n",
+    "# sample_img = nd2.get_frame_2D(v=0, c=1)  # [:,500:1000]\n",
+    "# sample_img = image_to_xarray(sample_img, nd2.metadata[\"pixel_microns\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_img = tifffile.imread(\"t000001xy14c2.tif\")\n",
+    "scale = 4.25 / 20\n",
+    "sample_img = sample_img / sample_img.max()\n",
+    "sample_img = simulation.image_to_xarray(sample_img, scale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = sample_img.values > skimage.filters.threshold_otsu(sample_img.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_spectra = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_idx = skimage.morphology.label(labels) % num_spectra + (labels != 0)\n",
+    "for i in range(3):\n",
+    "    fp_idx = skimage.morphology.dilation(fp_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_img = simulation.xarray_like(sample_img, fp_idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regrid FP image to excitation line grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shifts = dict(x=500, y=470)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_img_offset = simulation.shift_and_interp(fp_img, line_img, shifts, method=\"nearest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_img_offset.plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_img_offset = simulation.shift_and_interp(sample_img, line_img, shifts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(fp_img_offset * sample_img_offset).plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Laser spectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laser_spectrum = scipy.stats.norm.pdf(excitation_bins, 550, 10) * excitation_bin_size\n",
+    "laser_spectrum = xr.DataArray(\n",
+    "    laser_spectrum, coords=dict(ex=excitation_bins), dims=[\"ex\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laser_spectrum.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Laser filter spectrum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excitation image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excitation_img = line_img * laser_spectrum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Absorption image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_img_offset.astype(np.uint32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_excitation_img = xr.DataArray(\n",
+    "    np.rollaxis(fp_excitation_spectra[fp_img_offset.astype(np.uint8), :], -1),\n",
+    "    coords=dict(ex=excitation_bins, x=fp_img_offset.x, y=fp_img_offset.y),\n",
+    "    dims=[\"ex\", \"y\", \"x\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_excitation_intensity_img = (sample_excitation_img * sample_img_offset).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_excitation_intensity_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_excitation_intensity_img[30].plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_excitation_intensity_img[:, 30, 3180:3230].plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "absorption_img = excitation_img * sample_excitation_intensity_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "absorption_img[60].plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Emission image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reflected emission"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# "
    ]
   }
  ],
