--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -9,6 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
+    "import numba\n",
     "import re\n",
     "import requests\n",
     "import holoviews as hv\n",
@@ -75,7 +76,7 @@
    "source": [
     "excitation_bins = np.linspace(300, 850, 200)\n",
     "excitation_bin_size = (excitation_bins[-1] - excitation_bins[0]) / len(excitation_bins)\n",
-    "emission_bins = np.linspace(300, 850, 200)  # excitation_bins\n",
+    "emission_bins = np.linspace(300, 850, 300)  # excitation_bins\n",
     "emission_bin_size = (emission_bins[-1] - emission_bins[0]) / len(emission_bins)"
    ]
   },
@@ -106,10 +107,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra = {\n",
-    "    name: simulation.interpolate_dataframe(spectrum, emission_bins)\n",
-    "    for name, spectrum in simulation.import_fpbase_spectra(spectra_urls).items()\n",
-    "}"
+    "# spectra = {\n",
+    "#     name: simulation.interpolate_dataframe(spectrum, emission_bins)\n",
+    "#     for name, spectrum in simulation.import_fpbase_spectra(spectra_urls).items()\n",
+    "# }"
    ]
   },
   {
@@ -118,22 +119,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fp_names = list(spectra.keys())\n",
+    "fp_excitation_spectra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_names = [\"background\", *spectra.keys()]\n",
     "fp_excitation_spectra = np.stack(\n",
-    "    [np.zeros(len(excitation_bins)), *[spectra[name][\"ex\"].values for name in fp_names]]\n",
-    ")\n",
-    "seesaw_amounts = np.linspace(-0.5, 1, len(excitation_bins))[np.newaxis, :]\n",
-    "fp_emission_spectra = np.stack(\n",
     "    [\n",
-    "        np.zeros((len(emission_bins), len(excitation_bins))),\n",
+    "        np.zeros(len(excitation_bins)),\n",
     "        *[\n",
-    "            simulation.seesaw_spectrum(\n",
-    "                spectra[name][\"em\"].values[:, np.newaxis], seesaw_amounts\n",
-    "            )\n",
-    "            for name in fp_names\n",
+    "            simulation.interpolate_dataframe(spectrum[\"ex\"], excitation_bins).values\n",
+    "            for spectrum in spectra.values()\n",
     "        ],\n",
     "    ]\n",
-    ")"
+    ").astype(np.float32)\n",
+    "fp_excitation_spectra = xr.DataArray(\n",
+    "    fp_excitation_spectra,\n",
+    "    coords=dict(fp=fp_names, ex=excitation_bins),\n",
+    "    dims=[\"fp\", \"ex\"],\n",
+    ")\n",
+    "fp_excitation_spectra = fp_excitation_spectra.fillna(0)\n",
+    "seesaw_amounts = np.linspace(-0.5, 1, len(excitation_bins))[np.newaxis, :]\n",
+    "fp_emission_spectra = (\n",
+    "    np.stack(\n",
+    "        [\n",
+    "            np.zeros((len(emission_bins), len(excitation_bins))),\n",
+    "            *[\n",
+    "                simulation.seesaw_spectrum(\n",
+    "                    simulation.interpolate_dataframe(\n",
+    "                        spectrum[\"em\"], emission_bins\n",
+    "                    ).values[:, np.newaxis],\n",
+    "                    seesaw_amounts,\n",
+    "                )\n",
+    "                for spectrum in spectra.values()\n",
+    "            ],\n",
+    "        ]\n",
+    "    )\n",
+    "    .astype(np.float32)\n",
+    "    .swapaxes(1, 2)\n",
+    ")\n",
+    "fp_emission_spectra = xr.DataArray(\n",
+    "    fp_emission_spectra,\n",
+    "    coords=dict(fp=fp_names, ex=excitation_bins, em=emission_bins),\n",
+    "    dims=[\"fp\", \"ex\", \"em\"],\n",
+    ")\n",
+    "fp_emission_spectra = fp_emission_spectra.fillna(0)"
    ]
   },
   {
@@ -142,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(fp_emission_spectra[3])"
+    "fp_emission_spectra[3].plot()"
    ]
   },
   {
@@ -159,7 +194,7 @@
    "outputs": [],
    "source": [
     "line_img = simulation.draw_excitation_line(\n",
-    "    np.linspace(0.6, 1.3, len(excitation_bins)) * u.mm,\n",
+    "    np.linspace(0.3, 1.3, len(excitation_bins)) * u.mm,\n",
     "    0.3 * u.um,\n",
     "    0 * u.um,\n",
     "    1,\n",
@@ -225,7 +260,7 @@
     "sample_img = tifffile.imread(\"t000001xy14c2.tif\")\n",
     "scale = 4.25 / 20\n",
     "sample_img = sample_img / sample_img.max()\n",
-    "sample_img = simulation.image_to_xarray(sample_img, scale)"
+    "sample_img = simulation.image_to_xarray(sample_img, scale).astype(np.float32)"
    ]
   },
   {
@@ -254,7 +289,8 @@
    "source": [
     "fp_idx = skimage.morphology.label(labels) % num_spectra + (labels != 0)\n",
     "for i in range(3):\n",
-    "    fp_idx = skimage.morphology.dilation(fp_idx)"
+    "    fp_idx = skimage.morphology.dilation(fp_idx)\n",
+    "fp_idx = fp_idx.astype(np.uint8)"
    ]
   },
   {
@@ -288,7 +324,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fp_img_offset = simulation.shift_and_interp(fp_img, line_img, shifts, method=\"nearest\")"
+    "fp_img_offset = simulation.shift_and_interp(\n",
+    "    fp_img, line_img, shifts, method=\"nearest\"\n",
+    ").astype(np.uint8)"
    ]
   },
   {
@@ -306,7 +344,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_img_offset = simulation.shift_and_interp(sample_img, line_img, shifts)"
+    "sample_img_offset = simulation.shift_and_interp(sample_img, line_img, shifts).astype(\n",
+    "    np.float32\n",
+    ")"
    ]
   },
   {
@@ -331,7 +371,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "laser_spectrum = scipy.stats.norm.pdf(excitation_bins, 550, 10) * excitation_bin_size\n",
+    "laser_spectrum = (\n",
+    "    scipy.stats.norm.pdf(excitation_bins, 550, 10).astype(np.float32)\n",
+    "    * excitation_bin_size\n",
+    ")\n",
     "laser_spectrum = xr.DataArray(\n",
     "    laser_spectrum, coords=dict(ex=excitation_bins), dims=[\"ex\"]\n",
     ")"
@@ -382,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fp_img_offset.astype(np.uint32)"
+    "fp_img_offset"
    ]
   },
   {
@@ -392,7 +435,7 @@
    "outputs": [],
    "source": [
     "sample_excitation_img = xr.DataArray(\n",
-    "    np.rollaxis(fp_excitation_spectra[fp_img_offset.astype(np.uint8), :], -1),\n",
+    "    np.rollaxis(fp_excitation_spectra[fp_img_offset, :].values, -1),\n",
     "    coords=dict(ex=excitation_bins, x=fp_img_offset.x, y=fp_img_offset.y),\n",
     "    dims=[\"ex\", \"y\", \"x\"],\n",
     ")"
@@ -413,7 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_excitation_intensity_img"
+    "sample_excitation_intensity_img.dtype"
    ]
   },
   {
@@ -453,6 +496,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "absorption_img.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_idx.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp_emission_spectra.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -460,10 +530,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@numba.guvectorize(\n",
+    "    \"(float32[:,:,:,:], uint8[:,:], float32[:,:,:], float32[:,:,:])\",\n",
+    "    \"(ex,y,x,k), (y,x), (n,ex,em) -> (em,y,x)\",\n",
+    ")\n",
+    "def _generate_emission(absorption_img, idx_img, emission_spectra, out):\n",
+    "    for y in range(absorption_img.shape[1]):\n",
+    "        for x in range(absorption_img.shape[2]):\n",
+    "            out[:, y, x] = (\n",
+    "                absorption_img[:, y, x, :] * emission_spectra[idx_img[y, x], :, :]\n",
+    "            ).sum(axis=0)\n",
+    "            # out[:,y,x] = (absorption_img[:,y,x][:,np.newaxis] * emission_spectra[idx_img[y,x],:,:]).sum(axis=0)\n",
+    "\n",
+    "\n",
+    "def generate_emission(absorption_img, idx_img, emission_spectra):\n",
+    "    ary = _generate_emission(\n",
+    "        np.expand_dims(absorption_img.values, -1),\n",
+    "        idx_img.values,\n",
+    "        emission_spectra.values,\n",
+    "    )\n",
+    "    return xr.DataArray(\n",
+    "        ary,\n",
+    "        coords=dict(em=emission_spectra.em, y=absorption_img.y, x=absorption_img.x),\n",
+    "        dims=[\"em\", \"y\", \"x\"],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "emission_img = generate_emission(absorption_img, fp_img_offset, fp_emission_spectra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_img[:, 30].plot(aspect=20, size=5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Reflected emission"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Camera"
    ]
   },
   {
