[deaton/trenchripper] Metadata switch to parquet.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-28_CN_GC_Reanalysis_2/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-28_CN_GC_Reanalysis_2/Master.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -78,8 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-05-31_validation_data/Main_Experiment.nd2\""
+    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\"\n",
+    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
    ]
   },
   {
@@ -123,7 +123,7 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=20,\n",
+    "    n_workers=50,\n",
     "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
@@ -742,9 +742,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "kymograph_metadata = pd.read_parquet(headpath + \"/kymograph/metadata\")"
+    "meta_handle = tr.pandas_hdf5_handler(headpath + \"/metadata.hdf5\")\n",
+    "kymograph_metadata = meta_handle.read_df(\"kymograph\")"
    ]
   },
   {
@@ -1155,8 +1154,8 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=30,\n",
-    "    memory=\"4GB\",\n",
+    "    n_workers=10,\n",
+    "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -1242,7 +1241,7 @@
    "source": [
     "from ipywidgets import interactive, IntText, IntSlider\n",
     "\n",
-    "kyview = tr.analysis.kymograph_viewer(headpath, \"GFP\", \"fluorsegmentation\")"
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"Phase\", \"fluorsegmentation\")"
    ]
   },
   {
@@ -1285,6 +1284,13 @@
     "    invert=Dropdown(options=[True, False], value=False),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
