--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-22_segmentation_alternatives/implementation.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-05-22_segmentation_alternatives/implementation.ipynb
@@ -23,8 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2020-03-02_plasmid_loss/\"\n",
-    "nd2file = \"/n/scratch2/de64/2020-03-02_plasmid_loss/Basilisk_SJC25x2_SJC28_Losses.nd2\""
+    "headpath = \"/n/scratch2/de64/2019-05-31_validation_data/\""
    ]
   },
   {
@@ -51,7 +50,8 @@
     "from scipy import ndimage as ndi\n",
     "\n",
     "from skimage.segmentation import watershed\n",
-    "from skimage.feature import peak_local_max"
+    "from skimage.feature import peak_local_max\n",
+    "import dask.dataframe as dd"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "        self,\n",
     "        bit_max=0,\n",
     "        scale_timepoints=False,\n",
-    "        scaling_percentage=0.9,\n",
+    "        scaling_percentile=0.9,\n",
     "        img_scaling=1.0,\n",
     "        smooth_sigma=0.75,\n",
     "        niblack_scaling=1.0,\n",
@@ -79,7 +79,7 @@
     "        self.bit_max = bit_max\n",
     "\n",
     "        self.scale_timepoints = scale_timepoints\n",
-    "        self.scaling_percentage = scaling_percentage\n",
+    "        self.scaling_percentile = scaling_percentile\n",
     "\n",
     "        self.img_scaling = img_scaling\n",
     "\n",
@@ -158,7 +158,7 @@
     "        t_tot = img_arr.shape[0]\n",
     "        img_arr = self.to_8bit(img_arr, self.bit_max)\n",
     "        if self.scale_timepoints:\n",
-    "            img_arr = self.scale_kymo(img_arr, self.scaling_percentage)\n",
+    "            img_arr = self.scale_kymo(img_arr, self.scaling_percentile)\n",
     "\n",
     "        input_kymo = kymo_handle()\n",
     "        input_kymo.import_wrap(img_arr)\n",
@@ -220,7 +220,7 @@
     "        seg_channel=\"\",\n",
     "        bit_max=0,\n",
     "        scale_timepoints=False,\n",
-    "        scaling_percentage=0.9,\n",
+    "        scaling_percentile=0.9,\n",
     "        img_scaling=1.0,\n",
     "        smooth_sigma=0.75,\n",
     "        niblack_scaling=1.0,\n",
@@ -232,31 +232,28 @@
     "        distance_threshold=2,\n",
     "    ):\n",
     "\n",
-    "        #         if paramfile:\n",
-    "        #             parampath = headpath + \"/fluorescent_segmentation.par\"\n",
-    "        #             with open(parampath, 'rb') as infile:\n",
-    "        #                 param_dict = pickle.load(infile)\n",
+    "        if paramfile:\n",
+    "            parampath = headpath + \"/fluorescent_segmentation.par\"\n",
+    "            with open(parampath, \"rb\") as infile:\n",
+    "                param_dict = pickle.load(infile)\n",
     "\n",
-    "        #             img_scaling = param_dict[\"Image Scaling Factor:\"]\n",
-    "        #             scale_timepoints = param_dict[\"Scale Fluorescence?\"]\n",
-    "        #             scaling_percentage = param_dict[\"Scaling Percentile:\"]\n",
-    "        #             seg_channel = param_dict[\"Segmentation Channel:\"]\n",
-    "        #             smooth_sigma = param_dict[\"Gaussian Kernel Sigma:\"]\n",
-    "        #             bit_max = param_dict['8 Bit Maximum:']\n",
-    "        #             min_obj_size = param_dict[\"Minimum Object Size:\"]\n",
-    "        #             cell_mask_method = param_dict[\"Cell Mask Thresholding Method:\"]\n",
-    "        #             global_threshold = param_dict[\"Global Threshold:\"]\n",
-    "        #             cell_otsu_scaling = param_dict[\"Cell Threshold Scaling:\"]\n",
-    "        #             local_otsu_r = param_dict[\"Local Otsu Radius:\"]\n",
-    "        #             edge_threshold_scaling = param_dict[\"Edge Threshold Scaling:\"]\n",
-    "        #             threshold_step_perc = param_dict[\"Threshold Step Percent:\"]\n",
-    "        #             threshold_perc_num_steps = param_dict[\"Number of Threshold Steps:\"]\n",
-    "        #             convex_threshold = param_dict[\"Convexity Threshold:\"]\n",
+    "        seg_channel = param_dict[\"Segmentation Channel:\"]\n",
+    "        bit_max = param_dict[\"8 Bit Maximum:\"]\n",
+    "        scale_timepoints = param_dict[\"Scale Fluorescence?\"]\n",
+    "        scaling_percentile = param_dict[\"Scaling Percentile:\"]\n",
+    "        img_scaling = param_dict[\"Image Scaling Factor:\"]\n",
+    "        smooth_sigma = param_dict[\"Gaussian Kernel Sigma:\"]\n",
+    "        global_threshold = param_dict[\"Global Threshold:\"]\n",
+    "        cell_otsu_scaling = param_dict[\"Cell Threshold Scaling:\"]\n",
+    "        local_otsu_r = param_dict[\"Local Otsu Radius:\"]\n",
+    "        min_obj_size = param_dict[\"Minimum Object Size:\"]\n",
+    "        niblack_scaling = param_dict[\"Niblack Scaling:\"]\n",
+    "        distance_threshold = param_dict[\"Distance Threshold:\"]\n",
     "\n",
     "        super(fluo_segmentation_cluster, self).__init__(\n",
     "            bit_max=bit_max,\n",
     "            scale_timepoints=scale_timepoints,\n",
-    "            scaling_percentage=scaling_percentage,\n",
+    "            scaling_percentile=scaling_percentile,\n",
     "            img_scaling=img_scaling,\n",
     "            smooth_sigma=smooth_sigma,\n",
     "            niblack_scaling=niblack_scaling,\n",
@@ -272,8 +269,7 @@
     "        self.seg_channel = seg_channel\n",
     "        self.kymographpath = headpath + \"/kymograph\"\n",
     "        self.fluorsegmentationpath = headpath + \"/fluorsegmentation\"\n",
-    "        self.metapath = headpath + \"/metadata.hdf5\"\n",
-    "        self.meta_handle = pandas_hdf5_handler(self.metapath)\n",
+    "        self.metapath = headpath + \"/kymograph/metadata\"\n",
     "\n",
     "    def generate_segmentation(self, file_idx):\n",
     "        with h5py.File(\n",
@@ -302,8 +298,8 @@
     "        writedir(self.fluorsegmentationpath, overwrite=True)\n",
     "        dask_controller.futures = {}\n",
     "\n",
-    "        kymodf = self.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
-    "        file_list = kymodf[\"File Index\"].unique().tolist()\n",
+    "        kymodf = dd.read_parquet(self.metapath)\n",
+    "        file_list = kymodf[\"File Index\"].unique().compute().tolist()\n",
     "        num_file_jobs = len(file_list)\n",
     "\n",
     "        random_priorities = np.random.uniform(size=(num_file_jobs,))\n",
@@ -345,6 +341,7 @@
     "import h5py\n",
     "import pickle\n",
     "import copy\n",
+    "import pandas as pd\n",
     "\n",
     "from ipywidgets import (\n",
     "    interact,\n",
@@ -371,7 +368,7 @@
     "        headpath,\n",
     "        bit_max=0,\n",
     "        scale_timepoints=False,\n",
-    "        scaling_percentage=0.9,\n",
+    "        scaling_percentile=0.9,\n",
     "        img_scaling=1.0,\n",
     "        smooth_sigma=0.75,\n",
     "        niblack_scaling=1.0,\n",
@@ -387,7 +384,7 @@
     "            self,\n",
     "            bit_max=bit_max,\n",
     "            scale_timepoints=scale_timepoints,\n",
-    "            scaling_percentage=scaling_percentage,\n",
+    "            scaling_percentile=scaling_percentile,\n",
     "            img_scaling=img_scaling,\n",
     "            smooth_sigma=smooth_sigma,\n",
     "            niblack_scaling=niblack_scaling,\n",
@@ -401,19 +398,22 @@
     "\n",
     "        self.headpath = headpath\n",
     "        self.kymographpath = headpath + \"/kymograph\"\n",
-    "        self.metapath = headpath + \"/metadata.hdf5\"\n",
-    "        self.meta_handle = pandas_hdf5_handler(self.metapath)\n",
-    "        self.kymodf = self.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
+    "        self.metapath = headpath + \"/kymograph/metadata\"\n",
+    "        #         self.metapath = headpath + \"/metadata.hdf5\"\n",
+    "        self.meta_handle = pandas_hdf5_handler(headpath + \"/metadata.hdf5\")\n",
+    "        self.kymodf = pd.read_parquet(\n",
+    "            self.metapath,\n",
+    "            columns=[\"timepoints\", \"trenchid\", \"File Index\", \"File Trench Index\"],\n",
+    "        )\n",
+    "\n",
+    "        #         self.kymodf = self.meta_handle.read_df(\"kymograph\",read_metadata=True)\n",
     "        globaldf = self.meta_handle.read_df(\"global\", read_metadata=True)\n",
     "        self.all_channels = globaldf.metadata[\"channels\"]\n",
     "\n",
-    "        timepoint_num = len(\n",
-    "            self.kymodf.index.get_level_values(\"timepoints\").unique().tolist()\n",
-    "        )\n",
+    "        timepoint_num = len(self.kymodf[\"timepoints\"].unique().tolist())\n",
     "        self.t_range = (0, timepoint_num)\n",
-    "        self.trenchid_arr = (\n",
-    "            self.kymodf.index.get_level_values(\"trenchid\").unique().values\n",
-    "        )\n",
+    "        self.trenchid_arr = self.kymodf[\"trenchid\"].unique()\n",
+    "        self.kymodf = self.kymodf.set_index([\"trenchid\", \"timepoints\"])\n",
     "\n",
     "        self.final_params = {}\n",
     "\n",
@@ -872,6 +872,15 @@
     "            )\n",
     "        display(marker_mask_int)\n",
     "\n",
+    "    def process_results(self):\n",
+    "        self.final_params[\"Segmentation Channel:\"] = self.seg_channel\n",
+    "        for key, value in self.final_params.items():\n",
+    "            print(key + \" \" + str(value))\n",
+    "\n",
+    "    def write_param_file(self):\n",
+    "        with open(self.headpath + \"/fluorescent_segmentation.par\", \"wb\") as outfile:\n",
+    "            pickle.dump(self.final_params, outfile)\n",
+    "\n",
     "\n",
     "#     def plot_threshold_result(self,edge_threshold_scaling,min_obj_size):\n",
     "#         composite_mask_list = []\n",
@@ -1105,7 +1114,103 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inter_test.process_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inter_test.write_param_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller = tr.trcluster.dask_controller(\n",
+    "    walltime=\"01:00:00\",\n",
+    "    local=False,\n",
+    "    n_workers=20,\n",
+    "    memory=\"1GB\",\n",
+    "    working_directory=headpath + \"/dask\",\n",
+    ")\n",
+    "dask_controller.startdask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.displaydashboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segment = fluo_segmentation_cluster(headpath, paramfile=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segment.dask_segment(dask_controller)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(\n",
+    "    \"/n/scratch2/de64/2019-05-31_validation_data/fluorsegmentation/segmentation_10.hdf5\",\n",
+    "    \"r\",\n",
+    ") as infile:\n",
+    "    data = infile[\"data\"][:]\n",
+    "with h5py.File(\n",
+    "    \"/n/scratch2/de64/2019-05-31_validation_data/kymograph/kymograph_10.hdf5\", \"r\"\n",
+    ") as infile:\n",
+    "    img_data = infile[\"GFP\"][:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moo = tr.kymo_handle()\n",
+    "moo.import_wrap(data[0])\n",
+    "plt.imshow(moo.return_unwrap()[:, :400])\n",
+    "plt.show()\n",
+    "moo = tr.kymo_handle()\n",
+    "moo.import_wrap(img_data[0])\n",
+    "plt.imshow(moo.return_unwrap()[:, :400])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
