[shenker/microscope_design] Reflected excitation.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -98,28 +98,8 @@
     "    \"https://www.fpbase.org/spectra_csv/?q=1451,1450\",\n",
     "    \"https://www.fpbase.org/spectra_csv/?q=119,120\",\n",
     "    \"https://www.fpbase.org/spectra_csv/?q=121,122\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spectra = {\n",
-    "#     name: simulation.interpolate_dataframe(spectrum, emission_bins)\n",
-    "#     for name, spectrum in simulation.import_fpbase_spectra(spectra_urls).items()\n",
-    "# }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fp_excitation_spectra"
+    "]\n",
+    "spectra = simulation.import_fpbase_spectra(spectra_urls)"
    ]
   },
   {
@@ -585,6 +565,45 @@
    "metadata": {},
    "source": [
     "# Reflected emission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rebin excitation_img according to emission_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reflected_excitation_img = excitation_img.interp(ex=emission_bins).rename(ex=\"em\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coverslip_reflectivity = 0.1\n",
+    "emission_with_reflected = (\n",
+    "    emission_img + coverslip_reflectivity * reflected_excitation_img\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_with_reflected[130].plot()"
    ]
   },
   {
